--- a/proyeccion_demanda.ipynb
+++ b/proyeccion_demanda.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMSXmct1+VGWKv3GRoqw7qr",
+      "authorship_tag": "ABX9TyMXoCL7dqOZxvtERhBXNQ4s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +54,21 @@
       "metadata": {
         "id": "1abGsBY6Bavy"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "ipBSpraDCiEX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
